--- a/studyplan.html
+++ b/studyplan.html
@@ -5,6 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Streamlined Study Plan</title>
     <style>
+                .btn-back-home {
+            display: inline-block;
+            padding: 12px 25px;
+            background-color: #0073e6;
+            color: white;
+            font-size: 16px;
+            text-decoration: none;
+            border-radius: 5px;
+            margin-top: 20px;
+            transition: background-color 0.3s ease;
+            text-align: center;
+        }
+
+        .btn-back-home:hover {
+            background-color: #005bb5; /* Change color when hovered */
+        }
         body {
             font-family: Arial, sans-serif;
             line-height: 1.6;
@@ -68,6 +84,8 @@
 <body>
 
 <div class="content">
+    <!-- Button to go back to the home page -->
+    <a href="index.html" class="btn-back-home">Volver al Inicio</a>
     <h1>Streamlined Study Plan</h1>
     
     <div class="section">
