--- a/index.html
+++ b/index.html
@@ -90,13 +90,14 @@
     <header>
         <h1>Bienvenido a los Cursos</h1>
         <p>Selecciona un curso para acceder</p>
-        <a href="https://www.edx.org" class="btn-edx" target="_blank">Ir a EDX</a>
-    </header>
-
+        <a href="https://www.edx.org" class="btn-edx" target="_blank">Go to EDX</a>
         <!-- Button to access the study plan -->
         <div style="text-align: center; margin-top: 20px;">
-            <a href="studyplan.html" class="btn-study-plan">Acceder al Plan de Estudio</a>
+            <a href="studyplan.html" class="btn-study-plan">Acccess Study Plan</a>
         </div>
+    </header>
+
+        
 
     <div class="cursos-container" id="cursosContainer"></div>
 
