--- a/studyplan.html
+++ b/studyplan.html
@@ -85,7 +85,7 @@
 
 <div class="content">
     <!-- Button to go back to the home page -->
-    <a href="index.html" class="btn-back-home">Volver al Inicio</a>
+    <a href="index.html" class="btn-back-home">Home</a>
     <h1>Streamlined Study Plan</h1>
     
     <div class="section">
